--- a/styles.css
+++ b/styles.css
@@ -1971,6 +1971,12 @@ background-size: 200% 100%;
   padding-top: 3px;
   padding-bottom: 3px;
 }
+.schemeboluscetduration {
+  padding-bottom: 3px;
+}
+.schemeboluscetduration .timespan {
+  opacity: 0;
+}
 .schemepausecet {
   padding-top: 3px;
   padding-bottom: 3px;
