--- a/styles.css
+++ b/styles.css
@@ -1991,8 +1991,10 @@ background-size: 200% 100%;
   left: 0px;
   border: 0;
   margin-top: 0;
-  border-radius: 9px 9px 0 0;
+  border-radius: 7px 7px 0 0;
   pointer-events: none;
+  background: #ccc;
+  color: black;
 }
 #page2maxrate {
   opacity: 0;
