--- a/styles.css
+++ b/styles.css
@@ -2079,7 +2079,8 @@ background-size: 200% 100%;
 }
 .schemeboluscetduration {
   padding-bottom: 3px;
-}.schemeboluscptduration {
+}
+.schemeboluscptduration {
   padding-bottom: 3px;
 }
 
