--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,12 @@ body {
   overscroll-behavior-y: contain;
 }
 
+.iconsvg {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.125em;  
+  fill: currentColor;
+}
 
 /* block to prevent pinch zoom and overscroll (pull down to refresh in iOS)*/
 /* prevent pull-to-refresh for Safari 16+ */
@@ -6148,13 +6154,7 @@ body.dark #preview-expand-box > div > div.timespan {
   body {
     
   }
-/*  .modal-content {
-    font-size: 0.85rem;
-  }
-  .cardtitle {
-    font-size: 109%;
-  }
-*/
+
   .table-Init tr {
     height: 2.6rem;
   }
@@ -6182,102 +6182,7 @@ body.dark #preview-expand-box > div > div.timespan {
     display: none;
   }
 }
-/*
-@media screen and (max-height:520px) {
-  #top-bar-bg {padding-top:170px;}
-  #parallax {top:70px;}
-}
-*/
 
-@media print {
-    body {margin:0; padding:0;}
-    button {display:none; } 
-    .noprint {display:none;}
-    #resuslayer {display:none; }
-    body {font-size:9pt; line-height:11pt margin:0px; }
-    h2 {padding:0px; margin:0px;}
-    .nomobile { text-align:center; display:block; }
-    tr td {font-color: black; padding:0; height:20px;}
-    .vasostyle {font-color:black; background-color: white;}
-    /*.column {  width:50%;  vertical-align:top; display:inline-block; padding: 10px 4px 10px 4px;}
-    .column1 {  width:40%;  vertical-align:top; display:inline-block; }
-    .column2 {  width:60%;  vertical-align:top; display:inline-block; }*/
-      .column {  width:50%;  vertical-align:top; display:inline-block; padding: 0px 5px 0px 5px;}
-      .column1 {  width:45%;  vertical-align:top; padding-top:10px; display:inline-block; }
-      .column2 {  width:55%;  vertical-align:top; display:inline-block; }
-
-    #headerarea input[type=number] {font-size:100%; height:20px;margin:0;padding:0;}
-    #navbar {display:none;}
-    #navbar2 {display:none;}
-    #hamburger {display:none;}
-    #logo {display:none;}
-    #parallax {display:none;}
-    #top-bar-bg {display:none;}
-    .printbox {display:flex;}
-    select {margin:0;padding:0;border:transparent; -webkit-appearance:none; background:transparent;}
-
-    #table1 td {padding:0;}
-    .entrybox {padding:0; background:transparent;}
-    #contentrow1 {padding-top:70px;page-break-inside:avoid;}
-    #contentrow1 tr td {height:25px;}
-    #contentrow2 {padding-top:70px;font-size:8pt;page-break-inside:avoid;}
-    #contentrow2 tr td {padding:0 0 0 0;}
-    .inf-items {font-size:8pt; line-height:2.3;}
-    /*#contentrow2 select {font-size:100%;height:15px; margin:0;padding:0;}*/
-    #headerarea {position:fixed; top:0; width:100%; height:80px;}
-    .inlineselect {display:none;}
-    .noscreen {display:inline-block;}
-    .tableheading { margin: 15px 0px 0px 0px; font-size:10pt; line-height: 12pt; border:1px solid black;}
-    /*#otherdrugstable td {padding: 0px 2px 0px 2px; font-size:8pt;}*/
-    /*#about {display:block; position:fixed; bottom:0;}
-    #about a {display:none;}*/
-    /* tr.noborderb td {padding-bottom:0px;}
-     tr.noborderu {padding-top:0px;}
-     tr.noborderu td {padding-top:0px; font-size:80%;}*/
-    footer {display:none;}
-    /*label { font-size:120%;}*/
-    .prescribebox {display:block;}
-
-   /* new stuff */
-   .bg-purple{color:black;background:#debfd9;}
-   .bg-purplered{color:black;background:#debfd9;}
-   .inf-items {border-bottom-color:1px solid #ccc;}
-   .inf-item1 {display:none;}
-   .inf-item3 {display:none;}
-   .inf-item5 {display:none;}
-
-  .inf-heading1 {flex-basis:var(--widthcol1); border-bottom:1px solid #ccc; text-align:right; padding-right:7px;}
-  .inf-heading2 {flex-basis:var(--widthcol2); background:transparent; color:black; border-bottom:1px solid #ccc;}
-  .inf-item2 {flex-basis:var(--widthcol3);}
-  .inf-item4 {flex-basis:var(--widthcol4); font-weight:bold;}
-  .inf-item6 {flex-basis:var(--widthcol5);}
-
-  .inf-nomobile {display:inline-block;}
-  .inf-tableheading1 {flex-basis:48%;background:transparent;color:black; font-weight:bold; text-align:center; border:1px solid black; padding:4px 2px 0px 2px; margin:0; font-size:12pt; line-height:14pt;}
-  .inf-tableheading3 {flex-basis:var(--widthcol3); background:transparent;color:black; font-weight:bold; padding:2px; border-bottom:1px solid black;line-height:14pt;}
-  .inf-tableheading4 {flex-basis:var(--widthcol4); background:transparent;color:black; font-weight:bold; padding:2px; border-bottom:1px solid black;line-height:14pt;}
-  .inf-tableheading5 {flex-basis:var(--widthcol5); background:transparent;color:black; font-weight:bold; padding:2px; border-bottom:1px solid black;line-height:14pt;}
-  
-  .bottom-bar.grey {display:none;}
-  #bottom-bar {display:flex;position:fixed;bottom:0;left:0;width:35%;font-size:7pt;line-height:9pt;background:transparent;color:#000;}
-  .row-even {background-color:#eee;}
-  /* end new stuff */
-
-    #sedationtable tr td {border-bottom:1px solid white; padding:0;}
-    #otherstable tr td   {border-bottom:1px solid white;padding:0;}
-    #vasotable tr td     {border-bottom:1px solid white;padding:0;}
-    #antiHTtable tr td   {border-bottom:1px solid white;padding:0;}
-    #antiARRtable tr td  {border-bottom:1px solid white;padding:0;}
-
-
-    #sedationtable tr td.borderbot {border-bottom-color: #ccc;}
-    #otherstable tr td.borderbot {border-bottom-color: #ccc}
-    #vasotable tr td.borderbot {border-bottom-color: #ccc}
-    #antiHTtable tr td.borderbot {border-bottom-color: #ccc}
-    #antiARRtable tr td.borderbot {border-bottom-color: #ccc}
-
-
-}
 
 /* dark styles go here */
 body.dark {
@@ -6540,17 +6445,6 @@ body.dark #chart2wrapper {
 }
 
 @media (max-width: 767px) {
-
-
-  body.dark .line1 {
-    
-  }
-
-  body.dark .line2 {
-    
-  }
-
-
 
   body.dark .druglabelcontainer.propofol.active {
     background: #555;
@@ -7105,574 +6999,8 @@ body.dark a.button.newbuttongrey:hover {
   color: white;
 }
 
-
 .input-button-text {
   flex-grow: 1;
   align-self: center;
 }
-
-/*manual styles here */
-#menu2 {
-  height:100%;
-  width:100%;
-  position:fixed;
-  z-index:20;
-  top:0;
-  left:0;
-  background: rgb(0,0,0,0.8);
-  overflow-y:hidden;
-    -webkit-transform: translateY(-100%);
-      transform: translateY(-100%);
-  /*transition: transform 0.5s ease-out;*/
-}
-
-#menu2.open {
-      -webkit-transform: none;
-      transform: none;
-  transition: transform 0.3s ease-out;
-}
-#menu2 .menucontent {
-  left: 0;
-  width: 100%;
-}
-#menu2 .menucontent a {
- padding: 3px 0;
- font-size: 1.05rem;
- letter-spacing: 0.5px;
-}
-ol ::marker {
-  color: red;
-  font-family: "Brandon Text", sans-serif;
-  font-weight: bold;
-}
-.m-icon-inline {
-  padding: 4px; width: 1.8rem; height: 1.8rem; background: #ddd; border-radius: 9px
-}
-.m-emphasis {
-  font-weight: bold;
-  font-style: italic;
-  color: #198964;
-}
-.m-header {
-  position: fixed;
-  top: 0;
-  display: flex;
-  width: 100%;
-  height: 50px;
-  background: #111;
-  color: white;
-
-}
-.m-header-right {
-  flex-basis: calc(100% - 40px);
-  padding-left: 0.5rem;
-  padding-top: 0.5rem;
-}
-#chapternum {
-  font-size: 0.7rem;
-  color: #ccc;
-}
-#chaptername {
-  font-size: 1.25rem;
-  font-weight: bold;
-  line-height: 1.2rem;
-}
-.m-header-close {
-  flex-basis: 40px;
-}
-.m-subheader {
-  position: fixed;
-  display: flex;
-  height: 30px;
-  top: 50px;
-  width: 100%;
-  background: #111;
-  color: white;
-  box-shadow: 0px 3px 4px -1px rgba(0,0,0,0.3);
-}
-.m-subheader-icon {
-  flex-basis: 0.5rem;
-  border-radius: 9px 0 0 0;
-  background: #7B8092;
-}
-.m-subheader-left {
-  flex-basis: calc(100% - 1rem);
-  background: #7B8092;
-  font-weight: bold;
-  line-height: 30px;
-}
-.m-subheader-right {
-  flex-basis: 2rem;
-  padding-right: 26px;
-  line-height: 30px;
-  border-radius: 0 9px 0 0;
-  background: #7B8092;
-}
-#subheaderdropdown {
-  transition: 0.3s transform ease;
-  display: inline-block;
-  cursor: pointer;
-}
-
-#subheaderdropdown.active {
-  transform: rotate(180deg);
-}
-.m-onthispageexpand {
-  position: fixed;
-  top: 80px;
-  width: 100%;
-  padding-left: 10%;
-  padding-right: 10%;
-  left: 0;
-  background: #aab0c3;
-}
-.m-onthispageexpand.hide {
-  display: none;
-}
-.m-onthispageexpand ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 10px;
-}
-#onthispagetitle {
-  text-transform: uppercase;
-  font-size: 0.7rem;
-  color: white;
-  padding-top: 10px;
-}
-.onThisPageLink {
-  border-left: 1px solid #ddd;
-  font-weight: normal;
-  background: transparent;
-  padding-left: 0.5rem;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-.onThisPageLink.active {
-  background: linear-gradient(90deg, rgba(255,255,255,1) 0px, rgba(255,255,255,1) 5px, rgba(255,255,255,0.2) 5px, rgba(255,255,255,0.2) 100%);
-  font-weight: bold;
-}
-.m-onthispageexpand a {
-  color: inherit;
-  text-decoration: inherit;
-}
-.m-body {
-  background: #fff;          
-}
-.m-body.home {
-  background: #222;
-  flex-basis: 100%;
-}
-#m-main-home {
-  background: #222;
-  border-radius: 0;
-  width: 100%;
-}
-#m-main-home-content {
-  flex-basis: 90%;
-}
-@media screen and (min-width: 465px) {
-  #m-main-home-content {
-    flex-basis:70%
-  }
-}
-#m-main-home a {
-  background: #198964;
-  font-weight: bold;
-  color: white;
-  border-radius: 2rem;
-  display: inline-block;
-  padding: 0 6px;
-  text-decoration: none;
-}
-body.home {
-  background: #222;
-}
-.m-body * {
-    -webkit-user-select: text;
-     -moz-user-select: text;
-      -ms-user-select: text;
-          user-select: text;
-}
-.m-main {
-  width: 100%;
-  background: #fff;
-  padding: 0.5rem;
-  border-radius: 0 0 9px 9px;
-}
-
-.m-h1 {
-  font-family: "Brandon Text", sans-serif;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  color: #198964;
-  border-bottom: 1px solid #ddd;
-}
-
-.m-h2 {
-  font-family: "Brandon Text", sans-serif;
-  text-transform: uppercase;
-  font-size: 1rem;
-  color: #198964;
-  background: rgba(27,137,100,0.1);
-}
-
-.m-h3 {
-  font-weight: bold;
-  color: #555;
-  border-bottom: 1px solid #ddd;
-  font-style: italic;
-  margin-bottom: 0;
-}
-
-.m-h3 + p {
-  margin-top: 0.5rem;
-}
-
-.m-image-container {
-  text-align: center;
-  background: rgba(0,0,0,0.5);
-  overflow-y: auto;
-  overflow-x: auto;  
-}
-
-.m-image-container > img {
-  max-width: 80%;
-  max-height: 60vh;
-  display: block;
-  margin: 0.5rem auto;
-  cursor: zoom-in;
-  transition: 0.3s all ease;
-}
-
-.m-image-container > img.expand {
-  max-width: 95vw;
-  max-height: 95dvh;
-  cursor: zoom-out;
-
-}
-
-.m-video-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(0,0,0,0.5);
-}
-
-#footer-up {
-  display: flex;
-  background: #000;
-  width: 100%;
-  color: white;
-}
-
-#footer-up-left {
-  background: #7B8092;
-  border-radius: 0 0 0 9px;
-  padding: 0.5rem;
-  flex-basis: 50%;
-}
-
-#footer-up-right {
-  text-align: right;
-  border-radius: 0 0 9px 0;
-  background: #7b8092;
-  padding: 0.5rem;
-  flex-basis: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-#footer-down {
-  background: #000;
-  display: flex;
-  width: 100%;
-}
-
-
-#footer-previous {
-  flex-basis: 50%;
-  padding: 0.5rem;
-  color: white;
-  cursor: pointer;
-}
-
-#footer-next {
-  flex-basis: 50%;
-  text-align: right;
-  padding: 0.5rem;
-  color: white;
-  cursor: pointer;
-}
-
-#footer-up.home, #footer-down.home, #footer-previous.home, #footer-next.home {
-  display: none;
-}
-
-.smalltext {
-  text-transform: uppercase;
-  color: #ddd;
-  font-weight: bold;
-  letter-spacing: 1px;
-  font-size: 0.75rem;
-}
-
-.languagePanel {
-
-}
-
-.lang-option {
-  border-radius: 9px;
-  border: 2px solid #ddd;
-  background: #eee;
-  padding: 5px 10px;
-  margin-bottom: 8px;
-  cursor: pointer;
-}
-
-.lang-option.disabled {
-  background: #dedede;
-  color: #ccc;
-  pointer-events: none;
-}
-
-.lang-option:hover {
-  background: #ddd;
-}
-
-.lang-active {
-  border: 2px solid rgba(0,255,0,0.5);
-  background: #198964;
-  color: white;
-  font-weight: bold;
-}
-
-.lang-active:hover {
-  background: #198964;
-}
-
-.lang-subtext {
-  opacity: 0.5;
-  float: right;
-}
-
-.lang-disclaimer {
-  font-style: italic;
-  color: #555;
-  font-size: 0.8rem;
-  text-align: center;
-  padding: 10px 50px;
-}
-
-.languagebutton {
-  border: 1px solid white;
-  border-radius: 2rem;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 130px;
-  padding: 4px 8px;
-  cursor: pointer;
-}
-
-.m-aside > .languagebutton {
-  display: none;
-}
-
-.startbutton {
-  border-radius: 2rem;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90px;
-  padding: 4px 8px;
-  background: #198964;
-  cursor: pointer;
-}
-
-.languagedescription {
-  flex-basis: 100%;
-  padding-left: 8px;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.startdescription {
-  flex-basis: 100%;
-  padding-left: 8px;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-@media screen and (min-width: 465px) {
-  .m-main {
-    width: 80%;
-    max-width: 1024px;
-    margin: 1rem auto;
-  }
-  #menu2 .menucontent {
-    left: 15%;
-    width: 85%;
-  }
-  #menu2 .menucontent a {
-    font-size: 1.3rem;
-  }
-  #onthispagetitle {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .m-body.home {
-    top: 6.5%;
-    position: absolute;
-  }
-  .m-image-container > img {
-    max-width: 450px;
-  }
-  .m-image-container > img.expand {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  body {
-    display: flex;
-  }
-  .m-body {
-    background: #7b8092;
-  }
-  .hamburgermanual {
-    left: 0.5rem;
-  }
-  .hamburgermanual::after {
-    content: 'MENU';
-    font-weight:bold;
-    font-size:1.4rem;
-    color:#eee;
-    display:block;
-    position:absolute;
-    top: 0px;
-    left: 35px;
-  }
-  .m-aside {
-    flex-basis: 23%;
-  }
-  .m-aside > .languagebutton {
-    display: flex;
-    position: fixed;
-    bottom: 60px;
-    left: calc(11.5% - 65px);
-  }
-  .m-header {
-    top: 60px;
-    height: 100px;
-    width: 23%;
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-  }
-  .m-header-right {
-    padding-top: 2rem;
-  }
-  .m-onthispageexpand {
-    top: 160px;
-    width: 23%;
-    display: block;
-    padding-left: 0;
-    padding-right: 0;
-    background: transparent;
-  }
-  .m-onthispageexpand.hide {
-    display: block;
-  }
-  .m-body-placeholder {
-    display: none;
-  }
-  .m-subheader {
-    display: none;
-  }
-  .m-body {
-    flex-basis: 77%;
-  }
-  .m-main {
-    width: calc(100% - 1rem);
-    margin-left: 0;
-    border-radius: 1rem;
-    padding: 1rem;
-  }
-  .m-body {
-    background: #7B8092;
-  }
-  #onthispage {
-    border-bottom: 1px solid #ddd;
-  }
-  #onthispage ul {
-    margin-bottom: 0;
-  }
-  #footer-up {
-    width: calc(100% - 1rem);
-  }
-  #footer-down {
-    width: calc(100% - 1rem);
-    background: #111;
-    margin-bottom: 1rem;
-    border-radius: 0 0 1rem 1rem;
-  }
-  #footer-up-left {
-    border-radius:  0 0 0 1rem;
-    box-shadow: inset 1px -1px 0 white;
-  }
-  #footer-up-right {
-    border-radius: 0 0 1rem 0;
-    box-shadow: inset -1px -1px 0 white;
-    cursor: pointer;
-  }
-  #footer-previous {
-    border-radius: 0 0 0 1rem;
-    background: #111;
-  }
-  #footer-next {
-    border-radius: 0 0 1rem 0;
-    background: #111;
-  }
-  .languagePanel {
-    columns: 2;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .m-aside {
-    flex-basis: 30%;
-  }
-  .m-body {
-    flex-basis: 70%;
-  }
-  .hamburgermanual {
-    left: calc(7% + 0.5rem);
-  }
-  .m-header {
-    left: 7%;
-  }
-  .m-onthispageexpand {
-    left: 7%;
-  }
-  .m-main {
-    width: 90%;
-    max-width: auto;
-  }
-  #footer-up {
-    width: 90%;
-  }
-  #footer-down {
-    width: 90%;
-  }
-  .m-aside > .languagebutton {
-    left: calc(15% - 65px);
-  }
-}
-
-
-
 /* end new input styles */
