--- a/styles.css
+++ b/styles.css
@@ -650,14 +650,18 @@ body.dark #custom_fendilution, body.dark #custom_remidilution, body.dark #custom
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
     opacity:0;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
     will-change:opacity;
     pointer-events:none;
 }
 
 #modalInitial, #modalLoad {
   padding-top: 5vw; /*this is deliberate to make the top, left, right paddings the same*/
-  background-color:  rgba(0,0,0,0.7);
+  background-color:  #7B8092;
+}
+
+body.dark #modalInitial, body.dark #modalLoad {
+  background-color: #222
 }
 
 #modalInitialcontent, #modalLoadcontent {
