--- a/styles.css
+++ b/styles.css
@@ -3560,7 +3560,7 @@ body.dark .modal-body a.button_paedimode:hover {
   z-index:20;
   top:0;
   left:0;
-  background: rgb(0,0,0,0.8);
+  background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 80%, rgba(0,0,0,0.9) 100%);
   overflow-y:hidden;
     -webkit-transform: translateY(-100%);
       transform: translateY(-100%);
@@ -3622,22 +3622,27 @@ body.dark .modal-body a.button_paedimode:hover {
 
 .social {
   color: #888;
-  font-size: 1.5rem;
   text-align: center;
   position: absolute;
    bottom: 1rem;
-   left: calc(50% - 40px);
-   width: 80px;
-   display:none;
+   left: 15%;
+   width: 160px;
+   gap:18px;
+   display:flex;
 }
 
 .social a.item {
-  text-decoration: none;
+  flex-grow:1;
+  cursor:pointer;
   color: #888;
 }
 
-.social i:hover {
+.social a.item:hover {
   color: #fff;
+}
+
+.socialicon {
+  fill:currentColor;
 }
 .collapsible {
   margin-top:12px;
