--- a/styles.css
+++ b/styles.css
@@ -4651,7 +4651,11 @@ body.dark #preview-expand-box > div > div.timespan {
 }
 
 #logo {
-  position:fixed;width:100%;left:0;bottom:75px;z-index:91;
+  position:fixed;width:100%;left:0;top:calc(90% - 15px);z-index:91;
+}
+
+@media (max-height:660px) {
+  #logo {display:none}
 }
 
 @media (max-height:480px) {
@@ -4687,9 +4691,6 @@ body.dark #preview-expand-box > div > div.timespan {
 
 
 @media (max-height: 620px) {
-  #logo {
-    display: none;
-  }
   #rescuebuttons {
     opacity: 0;
     pointer-events: none;
